test/error/OpAddStringBool.ci
public static class Test
{
	public static bool Run()
	{
		bool b = true;
		string() s = "b=" + b; //ERROR: Cannot coerce bool to printable
		return b;
	}
}
